src/scss/components/card-terminal.scss
/* ==========================================================================
	 .card-terminal
	 ========================================================================== */

.card-terminal {
	position: relative;
	display: flex;
	flex-direction: column;
	justify-content: flex-end;
	height: 100%;

	// Stop blur, to prevent tooltip from closing
	&:before {
		content: '';
		position: absolute;
		bottom: 100%;
		left: 0;
		width: 100%;
		height: 60px;
	}

	&:hover {
		cursor: pointer;

		// Gradient background
		.card-terminal__img:before {
			transform: translate(-50%, -55%) rotate(45deg) scale(1);
			opacity: 1;
			visibility: visible;
			pointer-events: auto;
		}

		.card-terminal__img > img {
			transform: rotate(-22deg);
		}

		.card-terminal__tooltip {
			opacity: 1;
			visibility: visible;
			pointer-events: auto;
		}
	}

	.card-terminal__img {
		position: relative;
		max-width: 145px;

		// Gradient background
		&:before {
			content: '';
			position: absolute;
			z-index: -1;
			left: 50%;
			top: 50%;
			width: 260px;
			height: 280px;
			opacity: 0;
			visibility: hidden;
			pointer-events: none;
			border-radius: 76px;
			background: var(--color-blue-gradient);
			box-shadow: -8px 7px 42px rgba(0, 0, 0, 0.08);
			transform: translate(-50%, -55%) rotate(45deg) scale(0);
			transition-property: opacity, visibility, transform;
			transition-duration: var(--t-dur);
			transition-timing-function: var(--t-ease);

			@include media-breakpoint-up(md) {
				width: 310px;
				height: 320px;
			}

			@include media-breakpoint-up(lg) {
				width: 260px;
				height: 280px;
			}

			@include media-breakpoint-up(xxl) {
				width: 310px;
				height: 320px;
			}
		}

		@include media-breakpoint-up(md) {
			max-width: 185px;
		}

		@include media-breakpoint-up(lg) {
			max-width: 145px;
		}

		@include media-breakpoint-up(xxl) {
			max-width: 185px;
		}

		> img {
			width: 100%;
			transition: transform var(--t-dur) var(--t-ease);
		}
	}

	.card-terminal__title {
		font-weight: 400;
		margin-top: 35px;
		letter-spacing: .03em;
	}

	.card-terminal__price {
		position: absolute;
		top: 0;
		left: 100%;
		transform: translate(-20%, -50%);
	}

	.card-terminal__tooltip {
		position: absolute;
		bottom: calc(100% + 60px);
		left: 50%;
		transform: translateX(-50%);
		opacity: 0;
		visibility: hidden;
		pointer-events: none;
	}
}

